[package]
name = "rssh"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
inquire = "0.7"
ssh2 = "0.9"
keyring = "2.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
dirs = "5.0"  # 用于获取用户主目录
crossterm = "0.27"
termios = "0.3.3"
